maze.lessons.maze.island.IslandMaze.scala.error
Escaper:46: error: not found: value Déjà
  ecritMessage(Déjà passé)
               ^