maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!testMurGauche() && !estFaceMur)
  {
    avance()
  }
  droite()
  while (!estSurBiscuit())
  {
    keepHandOnSideWall()
  }
  prendBiscuit()
}


def keepHandOnSideWall()
{  
  var murGauche = testMurGauche()
  var sortieBoucle = false
  if (estSurMessage())
  {
    droite()
    if (!estFaceMur())
    {
      avance()
    }
  }
  if (estFaceMur())
  {
    droite()
    sortieBoucle = true
  }
  if (!murGauche && !sortieBoucle)
  {
    gauche()
    avance()
  }
  if (murGauche && estFaceMur() && !sortieBoucle)
  {
    droite()
  }
  if (murGauche && !estFaceMur() && !sortieBoucle)
  {
    avance()
  }
  ecritMessage(Déjà passé)
}


def testMurGauche() : Boolean =
{
  gauche()
  if (estFaceMur())
  {
    droite()
    return true
  }
  droite()
  return false
}